...
    <string name="add_transfer_method_processing_time_label">Processing Time:</string>

    <string name="select_transfer_method_item_fee_information">Transaction Fee: %s</string>
    <string name="select_transfer_method_item_processing_time_information">Processing Time: %s
    </string>

    <string name="title_activity_list_transfer_method">Accounts</string>
    <string name="empty_list_transfer_method_information">You didn\'t add an account yet. Once
        created, it will show up here!
    </string>
    <string name="transfer_method_list_item_description">Ending on %s</string>
    <string name="transfer_method_remove_confirmation">Are you sure that you want to remove this
        account?
    </string>
    <string name="transfer_method_remove_confirmation_title">Remove account</string>

    <string name="remove_button_label">Remove</string>

    <!-- menu title -->
    <string name="menu_transfer_funds">Transfer Funds</string>
    <string name="menu_remove_account">Remove Account</string>

    <!--Fee formatter-->
    <string name="fee_flat_formatter">%1$s %2$s</string>
    <string name="fee_percent_no_min_and_max_formatter">%1$s%%</string>
    <string name="fee_percent_only_min_formatter">%1$s%% (Min:%2$s %3$s)</string>
    <string name="fee_percent_only_max_formatter">%1$s%% (Max:%2$s %3$s)</string>
...
    <string name="fee_mix_no_min_and_max_formatter">%1$s %2$s + %3$s%%</string>
    <string name="fee_mix_only_min_formatter">%1$s %2$s + %3$s%% (Min:%1$s %4$s)</string>
    <string name="fee_mix_only_max_formatter">%1$s %2$s + %3$s%% (Max:%1$s %4$s)</string>
    <string name="fee_mix_formatter">%1$s %2$s + %3$s%% (Min:%1$s %4$s, Max:%1$s %5$s)</string>

    <!-- title and font icon -->
    <string name="bank_account">Bank Account</string>
    <string name="bank_card">Debit Card</string>
    <string name="wire_account">Wire Transfer</string>
    <string name="paper_check">Paper Check</string>
    <string name="prepaid_card">Prepaid Card</string>
    <string name="paypal_account">PayPal Account</string>

    <string name="bank_account_font_icon">\uE000</string>
    <string name="bank_card_font_icon">\uE005</string>
    <string name="wire_account_font_icon">\uE00D</string>
    <string name="paper_check_font_icon">\uE002</string>
    <string name="prepaid_card_font_icon">\uE00A</string>
    <string name="paypal_account_font_icon">\uE021</string>

    <string name="account_holder">Account Holder</string>
    <string name="account_information">Account Information</string>
    <string name="address">Address</string>
    <string name="contact_information">Contact Information</string>
    <string name="identification">Identification</string>
...
