...
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:id="@+id/empty_transfer_method_list_layout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/default_info_margin"
...
                android:gravity="center"
                android:text="@string/emptyStateAddTransferMethod"
                android:textAppearance="@style/TextAppearance.Hyperwallet.Headline6" />
        </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_transfer_method_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/row_height_double_entry"
        android:clipToPadding="false"/>
</LinearLayout>

