...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:expandedTitleMarginStart="@dimen/grid_margin_left"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:navigationContentDescription="@string/navigate_back_description"
                app:popupTheme="@style/AppTheme.PopupOverlay">

...
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.hyperwallet.android.ui.transfermethod.view.ListTransferMethodActivity"
        tools:showIn="@layout/activity_list_transfer_method"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        style="@style/Widget.Hyperwallet.FloatingActionButton"
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_right_margin"
        android:layout_marginBottom="@dimen/button_bottom_margin"
        android:contentDescription="@string/transfer_method_add_transfer_button_description"
...
