<resources>
    <string name="app_name">common</string>
    <string name="error_dialog_title">Error</string>
    <string name="error_dialog_connectivity_title">Connectivity Issue</string>
    <string name="error_dialog_unexpected_title">Unexpected Error</string>
    <string name="remove_button_label">Remove</string>
    <string name="cancel_button_label">Cancel</string>
    <string name="close_button_label">Close</string>
    <string name="try_again_button_label">Try again</string>
</resources>

